# jgcsh

./: .gitmodules  CMakeLists.txt  README.md
modules/lned/: CMakeLists.txt
modules/lned/include/jgcsh/lned/: lned.hpp
modules/lned/src/: lned.cpp
modules/shell/: CMakeLists.txt
modules/sheval/: CMakeLists.txt
modules/sheval/include/: sh_split.hpp
modules/sheval/include/jgcsh/sheval/: shlex.hpp
modules/sheval/src/: sh_grammar.hpp  sh_split.cpp  sh_types.hpp
src/: main.cpp  stringify.hpp
